# axum_client_derive

./: Cargo.toml
src/: lib.rs  reqwest_fn.rs
tests/: test.rs
